[tool.poetry]
name = "python-gui-programming-with-tkinter-and-customtkinter"
version = "0.1.0"
description = "CustomTkinter implementation of examples from Python GUI Programming with Tkinter, 2nd Edition, by Alan D. Moore, published by Packt"
authors = ["Mykhailo Shpilienko <m.shpilenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
